whatsapp numbver updated and partnership button changed to investment

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       
     </div>
     <div class="absolute -bottom-4 -left-4 bg-primary text-white p-3 rounded-xl shadow-lg animate-pulse-soft">
-      <p class="font-bold text-sm">72,000 GHS</p>
+      <p class="font-bold text-sm">120,000.00 GHS</p>
       <p class="text-xs">Projected Annual Revenue</p>
     </div>
   </div>
@@ -457,7 +457,7 @@
               <div class="bg-white p-4 rounded-lg shadow">
                 <p
                   class="text-3xl font-bold text-primary stat-number"
-                  data-target="7"
+                  data-target="10"
                 >
                   4
                 </p>
@@ -573,15 +573,7 @@
 </div>
 
 
-          <div class="text-center mt-8">
-            <a
-              href="https://wa.me/+233123456789?text=Hello%20BenSena%20Farms%2C%20I%20would%20like%20to%20speak%20with%20a%20team%20member%20about%20potential%20collaboration."
-              class="inline-flex items-center bg-gray-100 text-primary px-6 py-3 rounded-full hover:bg-gray-200 transition"
-              target="_blank"
-            >
-              <i class="fab fa-whatsapp mr-2"></i> Contact our team
-            </a>
-          </div>
+          
         </div>
       </div>
     </section>
@@ -661,7 +653,8 @@
                   class="bg-white text-primary px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition flex items-center justify-center"
                   target="_blank"
                 >
-                  <i class="fab fa-whatsapp mr-2"></i> Discuss Partnership
+                  <i class="fab fa-whatsapp mr-2"></i> Discuss Investment
+                  Opportunities
                 </a>
               </div>
             </div>
